adjust navbar, update foobar description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="./images/logo.svg" alt="Lachlan Gibson" />
           <span id="lachlan-nav-text">Lachlan Gibson</span>
         </div>
-        <a href="/">Home</a>
+        <a class="current-page" href="/">Home</a>
         <a href="/foobar">Google FooBar</a>
       </nav>
     </header>
