--- a/foobar.html
+++ b/foobar.html
@@ -33,20 +33,32 @@
           <span id="lachlan-nav-text">Lachlan Gibson</span>
         </div>
         <a href="/">Home</a>
-        <a href="/foobar">Google FooBar</a>
+        <a class="current-page" href="/foobar">Google FooBar</a>
       </nav>
     </header>
     <main>
       <article>
         <h1>The Google FooBar Challenge</h1>
         <p>
-          I completed Google's
+          Recently I completed Google's
           <a href="https://foobar.withgoogle.com/" target="_blank">FooBar</a>
           challenge during April 2023. This involved solving a series of
           mathematical and coding problems using Python 2.7 (or Java). The
           challenge included 5 levels of increasing difficulty with 1-3 tasks
-          per level. Here I summarise the tasks and explain how I solved each
-          one.
+          per level. I summarise in this document the tasks I received and
+          explain how I solved each one. See the articles by
+          <a
+            href="https://www.turing.com/kb/foobar-google-secret-hiring-technique"
+            target="_blank"
+            >Turing</a
+          >
+          and
+          <a
+            href="https://itsmohitt.medium.com/things-you-should-know-about-google-foobar-invitation-703a535bf30f"
+            target="_blank"
+            >Medium</a
+          >
+          to learn more about the challenge.
         </p>
 
         <div class="table-of-contents toc-layer1">
