update foobar intro and add code constraints

--- a/foobar.html
+++ b/foobar.html
@@ -58,8 +58,52 @@
             target="_blank"
             >Medium</a
           >
-          to learn more about the challenge.
+          to learn more about the challenge.<br />
+          <br />
+          The document is structured into five sections, one for each challenge,
+          and each challenge contains a section for each task. In each task
+          section, there are three main parts. The first is a simplified task
+          description adapted from the original text which can be found in a
+          black box. The second is an explanation of my own solution to the
+          problem. And the third is my own Python code which can be revealed by
+          clicking on on the relavent box. The constraints for coding in Python
+          or Java are included below.<br />
+          <br />
+          If you wish to attempt a task yourself, I recomend you firstly read
+          the task description, then think through the problem and write your
+          own code. Feel free to search online regarding any relevent
+          mathematical or coding principles, but do not search for a direct
+          solution to the problem. If you find yourself stuck for a long time,
+          then read my own solution explanation, but do not yet reveal my code.
+          I recomend you only reveal and look through my code if you are
+          absolutely stuck, or wish to compare your solution with mine.
+          Remember, some of the challenges are difficult, and can take several
+          hours or even several days to solve. Have fun!
         </p>
+
+        <div class="foobar-task-description">
+          Python Constraints<br />
+          ==================<br />
+          Your code will run inside a Python 2.7.13 sandbox. All tests will be
+          run by calling the solution() function. Standard libraries are
+          supported except for bz2, crypt, fcntl, mmap, pwd, pyexpat, select,
+          signal, termios, thread, time, unicodedata, zipimport, zlib.
+          Input/output operations are not allowed. Your solution must be under
+          32000 characters in length including new lines and other non-printing
+          characters.<br />
+          <br />
+          Java Constraints<br />
+          ================<br />
+          Your code will be compiled using standard Java 8. All tests will be
+          run by calling the solution() method inside the Solution class.
+          Execution time is limited. Wildcard imports and some specific classes
+          are restricted (e.g. java.lang.ClassLoader). You will receive an error
+          when you verify your solution if you have used a restricted class.
+          Third-party libraries, input/output operations, spawning threads or
+          processes and changes to the execution environment are not allowed.
+          Your solution must be under 32000 characters in length including new
+          lines and other non-printing characters.
+        </div>
 
         <div class="table-of-contents toc-layer1">
           <a href="#sec-challenge1">Challenge 1</a>
