--- a/foobar.html
+++ b/foobar.html
@@ -66,16 +66,16 @@
           description adapted from the original text which can be found in a
           black box. The second is an explanation of my own solution to the
           problem. And the third is my own Python code which can be revealed by
-          clicking on on the relavent box. The constraints for coding in Python
+          clicking on on the relevant box. The constraints for coding in Python
           or Java are included below.<br />
           <br />
-          If you wish to attempt a task yourself, I recomend you firstly read
+          If you wish to attempt a task yourself, I recommend you firstly read
           the task description, then think through the problem and write your
-          own code. Feel free to search online regarding any relevent
+          own code. Feel free to search online regarding any relevant
           mathematical or coding principles, but do not search for a direct
           solution to the problem. If you find yourself stuck for a long time,
           then read my own solution explanation, but do not yet reveal my code.
-          I recomend you only reveal and look through my code if you are
+          I recommend you only reveal and look through my code if you are
           absolutely stuck, or wish to compare your solution with mine.
           Remember, some of the challenges are difficult, and can take several
           hours or even several days to solve. Have fun!
