--- a/foobar.html
+++ b/foobar.html
@@ -33,6 +33,7 @@
           <span id="lachlan-nav-text">Lachlan Gibson</span>
         </div>
         <a href="/">Home</a>
+        <a href="/about">About</a>
         <a class="current-page" href="/foobar">Google FooBar</a>
       </nav>
     </header>
