--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <span id="lachlan-nav-text">Lachlan Gibson</span>
         </div>
         <a class="current-page" href="/">Home</a>
+        <a href="/about">About</a>
         <a href="/foobar">Google FooBar</a>
       </nav>
     </header>
