add foobar challenge intro sentences

--- a/foobar.html
+++ b/foobar.html
@@ -120,9 +120,10 @@
             <a href="#sec-task-1">Re-ID</a>
           </div> -->
           <p>
-            The first level contained only a single task, titled "Re-ID", which
-            involved efficiently generating prime numbers. A task summary,
-            adapted from the original challenge instructions, is given below.
+            The first level contained only a single task, titled
+            <a href="#sec-task-1">Re-ID</a>, which involved efficiently
+            generating prime numbers. A task summary, adapted from the original
+            challenge instructions, is given below.
           </p>
           <section class="foobar-task" id="sec-task-1">
             <div class="foobar-task-description">
@@ -204,6 +205,11 @@
             <a href="#sec-task-2">Please Pass the Coded Messages</a>
             <a href="#sec-task-3">Bunny Worker Locations</a>
           </div> -->
+          <p>
+            The second level contained two tasks, titled
+            <a href="#sec-task-2">Please Pass the Coded Messages</a> and
+            <a href="#sec-task-3">Bunny Worker Locations</a>.
+          </p>
           <section class="foobar-task" id="sec-task-2">
             <div class="foobar-task-description">
               Please Pass the Coded Messages<br />
@@ -352,6 +358,12 @@
             <a href="#sec-task-5">The Grandest Staircase Of Them All</a>
             <a href="#sec-task-6">Fuel Injection Perfection</a>
           </div> -->
+          <p>
+            The third level contained three tasks, titled
+            <a href="#sec-task-4">Prepare the Bunnies' Escape</a>,
+            <a href="#sec-task-5">The Grandest Staircase Of Them All</a> and
+            <a href="#sec-task-6">Fuel Injection Perfection</a>.
+          </p>
           <section class="foobar-task" id="sec-task-4">
             <div class="foobar-task-description">
               Prepare the Bunnies' Escape<br />
@@ -461,6 +473,11 @@
             <a href="#sec-task-7">Bringing a Gun to a Trainer Fight</a>
             <a href="#sec-task-8">Free the Bunny Workers</a>
           </div> -->
+          <p>
+            The fourth level contained two tasks, titled
+            <a href="#sec-task-7">Bringing a Gun to a Trainer Fight</a> and
+            <a href="#sec-task-8">Free the Bunny Workers</a>.
+          </p>
           <section class="foobar-task" id="sec-task-7">
             <div class="foobar-task-description">
               Bringing a Gun to a Trainer Fight<br />
@@ -574,6 +591,10 @@
           <!-- <div class="table-of-contents toc-layer2">
             <a href="#sec-task-9">Dodge the Lasers!</a>
           </div> -->
+          <p>
+            The fifth and last level contained only a single task, titled
+            <a href="#sec-task-9">Dodge the Lasers!</a>
+          </p>
           <section class="foobar-task" id="sec-task-9">
             <div class="foobar-task-description">
               Dodge the Lasers!<br />
