add ChatGPT intro to about.html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,48 @@
       </nav>
     </header>
     <main>
-      <div style="background-color: brown">WIP</div>
+      <section>
+        <h1>ChatGPT's Introduction to Lachlan</h1>
+        <p>
+          Dr. Lachlan Gibson is an Australian citizen who has a diverse
+          educational background in physics, data science, and mathematics. He
+          completed his Doctor of Philosophy (Physics) from the University of
+          Queensland in 2019, where his research focused on hydrodynamic forces
+          in optical tweezers. He continued his academic pursuits with a Master
+          of Data Science from the University of Queensland in 2020, where he
+          worked on his capstone project, Categorical Vector Clustering, aimed
+          at revealing hidden features of votes and voters.<br />
+          <br />
+          Dr. Gibson has had several work experiences in the field of research
+          and education. He worked as a Postdoctoral Research Fellow at the
+          University of Queensland from August 2020 to December 2022. During his
+          tenure, he was involved in rare-event simulation research and
+          reinforcement learning applied to AI safety, and environmental effects
+          on fishery risk and reinforcement learning methods for controlling
+          restless multi-armed bandits.<br />
+          <br />
+          In addition to research, Dr. Gibson also has experience in academic
+          tutoring and peer-assisted learning. He has worked as an academic
+          tutor for the School of Mathematics and Physics at the University of
+          Queensland from 2016 to 2020, where he taught tutorials, practicals,
+          and contact classes for various courses. He has also worked as a Peer
+          Assistant Tutor and PASS Leader, where he consulted students in the
+          Science Learning Centre for physics and mathematics inquiries and
+          facilitated PASS classes for PHYS1002 Electromagnetism and Modern
+          Physics.<br />
+          <br />
+          Dr. Gibson has also been involved in various volunteer works,
+          including serving as an Assistant Secretary at Salisbury Baptist
+          Church from 2020 to 2022, working with the pastorate (secretary,
+          treasurer and senior pastor), and operating the sound system for
+          regular services, band practices, and live streams. He has also been a
+          Youth Leader at Salisbury Baptist Church from 2014 to 2017, where he
+          mentored and led high school students from the church and local
+          community, and a Winter SMADD Camp Leader at Scripture Union from 2011
+          to 2016, where he worked with a team of volunteers to run an annual
+          weeklong creative arts camp for high schoolers.<br />
+        </p>
+      </section>
     </main>
   </body>
 </html>
