add linkedin and github links to navbar

--- a/foobar.html
+++ b/foobar.html
@@ -29,12 +29,26 @@
     <header>
       <nav>
         <div>
-          <img src="./images/logo.svg" alt="Lachlan Gibson" />
+          <img id="navbar-icon" src="./images/logo.svg" alt="Lachlan Gibson" />
           <span id="lachlan-nav-text">Lachlan Gibson</span>
         </div>
         <a href="/">Home</a>
         <a href="/about">About</a>
-        <a class="current-page" href="/foobar">Google FooBar</a>
+        <a class="current-page" href="/foobar">FooBar</a>
+        <div class="icon-container">
+          <a
+            href="https://www.linkedin.com/in/lachlan-james-gibson/"
+            class="icon-link"
+            target="_blank"
+            ><img src="./images/linkedin_icon.svg" alt="LinkedIn"
+          /></a>
+          <a
+            href="https://github.com/LachlanGibson"
+            class="icon-link"
+            target="_blank"
+            ><img src="./images/github_icon.svg" alt="GitHub" id="github-icon"
+          /></a>
+        </div>
       </nav>
     </header>
     <main>
