--- a/foobar.html
+++ b/foobar.html
@@ -48,6 +48,12 @@
             target="_blank"
             ><img src="./images/github_icon.svg" alt="GitHub" id="github-icon"
           /></a>
+          <a
+            href="https://scholar.google.com.au/citations?user=NeEMSU0AAAAJ&hl=en"
+            target="_blank"
+          >
+            <img src="./images/googlescholar_icon.svg" alt="Google Scholar" />
+          </a>
         </div>
       </nav>
     </header>
