--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             target="_blank"
             ><img src="./images/github_icon.svg" alt="GitHub" id="github-icon"
           /></a>
+          <a
+            href="https://scholar.google.com.au/citations?user=NeEMSU0AAAAJ&hl=en"
+            target="_blank"
+          >
+            <img src="./images/googlescholar_icon.svg" alt="Google Scholar" />
+          </a>
         </div>
       </nav>
     </header>
@@ -59,7 +65,7 @@
     <footer>
       <span>&copy; Copyright 2023 Lachlan Gibson</span>
       <br />
-      <span>Last updated 12 May 2023</span>
+      <span>Last updated 17 May 2023</span>
     </footer>
   </body>
 </html>
